# continuum-manip-volumetric-drilling-plugin

./: .gitignore  20220812_workflow.txt  CMakeLists.txt  LICENSE.md  README.md  cable_pull_subscriber.cpp  cable_pull_subscriber.h  cmvd_settings_rossub.cpp  cmvd_settings_rossub.h  continuum_manip_simple_plugin.cpp  continuum_manip_simple_plugin.h  continuum_manip_volumetric_drilling_plugin.cpp  continuum_manip_volumetric_drilling_plugin.h  curved_drilling_example.sh  curved_drilling_exampleTEST.sh  drape.yaml  drape.yaml.old  image_subscriber.cpp  image_subscriber.h  launch.yaml  launch_center_view.yaml  launch_noplugin.yaml  launch_scene.yaml  launch_simpleplugin.yaml  obstacle_est_subpub.cpp  obstacle_est_subpub.h  obstacle_estimate_service.cpp  obstacle_estimate_service.h  package.xml  pso_test.cpp  psocpp.h  run_block_w_trace.sh  run_cm_debug.sh  run_cm_only.sh  run_est.sh  run_info.sh  run_obst_demo.sh  run_ur5_cm.sh  run_ur5_cm_base_specify.sh  sequential_impulse_solver.cpp  (+6 more)
ADF/: R1_sphere.yaml  RFemur.yaml  anatomy_tracker.yaml  bigss_cm_burr.yaml  bigss_cm_burr_m.yaml  bigss_cm_burr_m.yaml.old  bigss_cm_burr_massless.yaml  bigss_cm_burr_static_base.yaml  bigss_snake_burr_at_spine_seg_femur.yaml  bigss_snake_centered.yaml  bigss_snake_centered_atorigin.yaml  bigss_snake_centered_collision_meshes.yaml  bigss_snake_centered_collision_meshes.yaml.old  bigss_snake_centered_collision_meshes_burr.yaml  bigss_snake_centered_collision_meshes_burr.yaml.old  bigss_snake_centered_collision_meshes_burr_changed.yaml  bigss_snake_centered_collision_meshes_burr_massless.yaml  (+35 more)
(+295 files in other folders)
